# Bounding-Box-Inference

./: .gitignore  Makefile  README.md  pyproject.toml  test.ipynb  train.py
bbi/: __init__.py  agent.py  utils.py
bbi/config/: goright_bbi.gin  goright_bbi_wo_status.gin  goright_expected_h2.gin  goright_expected_h5.gin  goright_perfect.gin  goright_qlearning.gin  goright_qlearning_wo_status.gin  goright_sampling_h2.gin  goright_sampling_h5.gin  training_config.py
bbi/models/: expectation.py  model_base.py  perfect.py  sampling.py
configs/: goright_bbi.gin  goright_bbi_wo_status.gin  goright_expected_h2.gin  goright_expected_h5.gin  goright_perfect.gin  goright_qlearning.gin  goright_qlearning_wo_status.gin  goright_sampling_h2.gin  goright_sampling_h5.gin
src/: main.py  train.py
src/bbi/agents/: agent.py
src/bbi/logging/: jsonl_logger.py
src/bbi/models/: __init__.py  expectation.py  model_base.py  perfect.py  sampling.py
src/bbi/utils/: __init__.py  mlflow_utils.py  model_registry.py  q_utils.py  utils.py
